zentao/zentao-dep.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zentao
  name: zentao-client
spec:
  ports:
  - port: 80
    targetPort: 80
    name: zentao
  selector:
    app: zentao
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zentao
  labels:
    app: zentao
spec:
  selector:
    matchLabels:
      app: zentao
  replicas: 1
  template:
    metadata:
      labels:
        app: zentao
    spec:
      containers:
      - name: zentao
        image: easysoft/zentao:12.4.3
        #https://hub.docker.com/r/easysoft/zentao/tags
        resources:
          requests: 
            memory: "2Gi"
            cpu: "2000m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        ports:
        - name: zentao
          containerPort: 80
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: zentao-data 
          mountPath: /www/zentaopms
        - name: zentao-mysql
          mountPath: /var/lib/mysql
      volumes:
        - name: zentao-data 
          persistentVolumeClaim:
            claimName: zentao-pvc
        - name: zentao-mysql 
          persistentVolumeClaim:
            claimName: zentao-mysql-pvc
